...
                TopBarTitle()
            }
        },
        navigationIcon = {
            if (showBackButton) {
                IconButton(
                    modifier = Modifier.testTag("backBtn"),
                    onClick = { navController.popBackStack() }
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "backButton"
                    )
                }
            }
        },
        actions = {
            IconButton(
                modifier = Modifier.testTag("settingsButton"),
                onClick = { navController.navigate(Screens.Settings.route) }
            ) {
                Icon(
                    imageVector = Icons.Filled.Settings,
                    contentDescription = "settingsButton"
                )
...
